--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
           <div class="nav-hamburger">
               <div class="bar"></div>
           </div>
-          <div class="nav-logo">
-              <a href="#">CP</a>
-          </div>
           <ul class="nav-links">
               <li class="nav-links__item"><a href="#portfolio">Portfolio</a></li>
               <li class="nav-links__item"><a href="#about">About Me</a></li>
@@ -72,7 +69,7 @@
         <section class="about__aside">
           <h3 class="about__subtitle">My CV</h3>
           <!--captcha para que obtenga mi cv-->
-          <a href="./assets/representacion-puntoFijo.docx" class="about__downloadcv" download="CristianPereiraCV"><span></span>Download CV</a>
+          <a href="./assets/example.txt" class="about__downloadcv" download="CristianPereiraCV"><span></span>Download CV</a>
         </section>
         <div class="about__svg-bg"></div>
       </section>
