menu interaction added

--- a/index.html
+++ b/index.html
@@ -9,37 +9,38 @@
     <link rel="shortcut icon" href="./assets/icons/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-      <nav>
-          <div class="nav-hamburger">
-              <div class="bar"></div>
-          </div>
-          <ul class="nav-links">
-              <li class="nav-links__item"><a href="#portfolio">Portfolio</a></li>
-              <li class="nav-links__item"><a href="#about">About Me</a></li>
-              <li class="nav-links__item"><a href="#specialized">Specialized</a></li>
-              <!--contactMe-->
-          </ul>
-          <a href="#contact" class="nav-cto">Hire Me</a>
-      </nav>
+  <!--menu-->
+  <header>
+    <nav>
+        <div class="nav-hamburger">
+          <div class="bar"></div>
+        </div>
+        <ul class="nav-links">
+          <li class="nav-links__item"><a href="#portfolio" class="nav-links__url">Portfolio</a></li>
+          <li class="nav-links__item"><a href="#about" class="nav-links__url">About Me</a></li>
+          <li class="nav-links__item"><a href="#specialized" class="nav-links__url">Specialized</a></li>
+        </ul>
+        <!--contactMe-->
+        <a href="#contact" class="nav-cto">Hire Me</a>
+    </nav>
   </header>
   <main>
     <section class="hero">
-        <h1 class="hero__title">Hi!, I am <span>Cristian</span> ,Front end Developer based in Argentina.</h1>
-        <p class="hero__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quasi optio deserunt fuga praesentium. Consectetur, modi aperiam blanditiis nesciunt cum exercitationem. Debitis minus provident laudantium sit? Illo id quos dicta!</p>
-        <div class="hero__svg-bg"></div>
+      <h1 class="hero__title">Hi!, I am <span>Cristian</span> ,Front end Developer based in Argentina.</h1>
+      <p class="hero__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quasi optio deserunt fuga praesentium. Consectetur, modi aperiam blanditiis nesciunt cum exercitationem. Debitis minus provident laudantium sit? Illo id quos dicta!</p>
+      <div class="hero__svg-bg"></div>
     </section>
     <section class="portfolio" id="portfolio">
         <h2 class="portfolio-title"> < projects > </h2>
         <section class="portfolio-container">
             <a href="#portfolio" class="container__item">
-                <figure>
-                    <img src="./assets/images/example-img.jpg" alt="example image">
-                    <figcaption>
-                        <img src="./assets/icons/html-5.svg" alt="html logo" class="portfolio-icon">
-                        <img src="./assets/icons/css.svg" alt="css logo" class="portfolio-icon">
-                    </figcaption>
-                </figure>
+              <figure>
+                <img src="./assets/images/example-img.jpg" alt="example image">
+                <figcaption>
+                  <img src="./assets/icons/html-5.svg" alt="html logo" class="portfolio-icon">
+                  <img src="./assets/icons/css.svg" alt="css logo" class="portfolio-icon">
+                </figcaption>
+              </figure>
             </a>
             <a href="#portfolio" class="container__item">
                 <figure>
